--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -73,12 +73,13 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 #footer-container { width: 955px; margin: 0 auto; padding: 10px 20px; }
 #footer .footer-nav { overflow: hidden; }
 #footer .footer-logos { overflow: hidden; position: relative; }
-#footer .footer-nav .searchform { margin: 10px 0; }
-#footer .footer-nav .searchform .screen-reader-text { display: none; }
 #footer .footer-logos .bars-image { margin: 0 auto; background: url("images/footer/footer_logo.png"); width: 276px; height: 53px; }
 #footer .footer-logos .fs-image { position: absolute; right: 0; top: 0; width: 112px; height: 53px; background: url("images/footer/footer_festeringslime_gray.png"); }
 #footer .footer-logos .fs-image:hover { background-image: url("images/footer/footer_festeringslime.png"); }
-	
+#footer .searchform { width: 340px; margin: 0 auto 30px auto; float: right; }
+#footer .searchform  input[type=text] { width: 250px; height: 10px; padding: 10px 5px; }
+#footer .searchform  input[type=submit] { width: 80px; height: 30px; }
+
 /* Widget */
 .bars-widget { border: 1px solid rgba(255,255,255,0.1); overflow: hidden; }
 .bars-widget-header { overflow: hidden; padding: 3px 0px 3px 3px; z-index: 10; width: 100%; background-color: rgba(0,0,0,0.95); }
@@ -100,23 +101,38 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 #page-home .more-posts-header { margin-bottom: 20px; padding: 5px; background-color: black; }
 #page-home .more-posts-header:hover { background-color: rgb(175,0,0); }
 
-/* Home page latest posts */
-.latest-posts { padding-bottom: 10px; }
-.latest-posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; background: rgba(0,0,0,0.6); }
-.latest-posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
-.latest-posts .post .post-info-container { display: table-cell; vertical-align: top; padding-left: 10px; }
-.latest-posts .post .post-info-container .post-excerpt p { margin: 10px 0; }
-.latest-posts .post .post-footer .scratch { margin-bottom: 5px; }
-.latest-posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
-.latest-posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
+/* Post default listing */
+.posts { padding-bottom: 10px; }
+.posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; background: rgba(0,0,0,0.6); }
+.posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
+.posts .post .post-info-container { display: table-cell; vertical-align: top; padding-left: 10px; }
+.posts .post .post-info-container .post-excerpt p { margin: 10px 0; }
+.posts .post .post-footer .scratch { margin-bottom: 5px; }
+.posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
+.posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
 
-/* News (news.php) */
+/* Pagination */
 .pagination { font-size: 10pt; font-family: Oswald; text-align: center; background: black; margin-bottom: 10px;  }
 .pagination ul { margin: 0; padding: 0;}
 .pagination li { text-transform: lowercase; display: inline-block; }
 .pagination li a,
 .pagination li.active a { text-decoration: none; display: block; color: white; padding: 5px 20px; }
 .pagination li.active a, .pagination li a:hover { background: rgb(175,0,0); }
+
+/* Search form */
+.searchform { overflow: hidden; }
+.searchform .screen-reader-text { display: none; }
+.searchform  input[type=text] { float: left; border: 0; background: #eee; -moz-border-radius: 3px 0 0 3px; -webkit-border-radius: 3px 0 0 3px; border-radius: 3px 0 0 3px; }
+.searchform  input[type=submit] { overflow: visible; position: relative; float: right; border: 0; padding: 0; cursor: pointer; background: rgb(175,0,0); -moz-border-radius: 0 3px 3px 0; -webkit-border-radius: 0 3px 3px 0; border-radius: 0 3px 3px 0; }
+
+/* Search (search.php) */
+#page-search .search-box { border-bottom: 5px solid rgb(175,0,0); border-radius: 10px; padding: 15px; background: rgba(0,0,0,0.6); margin-bottom: 20px; }
+#page-search .search-summary .keyword { margin-left: 20px; }
+#page-search .search-form-container { overflow: hidden; margin: 10px 0 20px 25px; }
+#page-search .searchform { width: 550px; }
+#page-search .searchform  input[type=text] { width: 430px; height: 20px; padding: 10px 5px; }
+#page-search .searchform  input[type=submit] { width: 110px; height: 40px; }
+#page-search .search-no-results { padding: 20px 20px 50px 20px; background: rgba(0,0,0,0.6); }
 
 /* Single post (single.php) */
 #page-single .post-header .post-category { margin-top: 10px; }
@@ -218,34 +234,6 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 .movieblock .movie-selectors::-webkit-scrollbar, .movieblock .movie-info-displayer::-webkit-scrollbar { width: 8px; }
 .movieblock .movie-selectors::-webkit-scrollbar-thumb, .movieblock .movie-info-displayer::-webkit-scrollbar-thumb { background: rgba(150,150,150,1); }
 .movieblock .movie-selectors::-webkit-scrollbar-thumb:window-inactive, .movieblock .movie-info-displayer::-webkit-scrollbar-thumb:window-inactive { background: rgba(255,0,0,0.4); }
-
-
-
-
-
-
-
-
-
-/* Search and archive */
-body.search .page-header, body.archive .archive-header { color: white; margin: 0; padding: 40px 0 0 0 !important; background: none; }
-body.search .page-header .page-title, body.search .page-header .bars-search-query,
-body.archive .archive-header .archive-title, body.archive .archive-header .bars-search-query { margin: 0; font-family: 'Oswald'; font-style: normal; font-weight: normal; letter-spacing: 3px; text-transform: uppercase; font-size: 1.5em; }
-body.search .page-content, body.archive .page-content { padding: 30px 0 80px 70px; color: rgb(201, 201, 201); }
-body.search .bars-search-query, body.archive .bars-search-query { padding: 0 0 0 100px !important; color: rgb(201,201,201); color: rgb(240,0,0); }
-body.search .page-title, body.archive .archive-title { padding: 0 0 0 50px !important; }
-
-body.search #content article:first-of-type, body.archive #content article:first-of-type { margin-top: 40px !important; }
-body.search #content article:nth-of-type(even), body.archive #content article:nth-of-type(even){ background-color: rgba(60,60,60,0.2); }
-body.search #content article:last-of-type, body.archive #content article:last-of-type { margin-bottom: 80px; }
-body.search #content article:last-of-type .scratch, body.archive #content article:last-of-type .scratch { display: none; }
-body.search article, body.archive article { padding: 10px 0px 0px 0px; }
-body.search .bars-post-search, body.archive .bars-post-search { margin-bottom: 10px; }
-body.search .bars-post-thumbnail, body.archive .bars-post-thumbnail { margin: 0 10px 10px 50px; float: left; border: 7px solid rgba(201,201,201, 0.2); }
-body.search .bars-post-excerpt, body.archive .bars-post-excerpt { color: rgb(201, 201, 201); }
-body.search .bars-post-excerpt  .entry-date, body.search .bars-post-excerpt  .entry-categories, body.search .bars-post-excerpt  .entry-tags,
-body.archive .bars-post-excerpt  .entry-date, body.archive .bars-post-excerpt  .entry-categories, body.archive .bars-post-excerpt  .entry-tags { padding: 0 0 0 20px; font-size: 0.9em; }
-body.search .bars-post-excerpt  .entry-title, body.archive .bars-post-excerpt  .entry-title { padding: 0 0 0 20px; font-size: 1.5em; font-family: 'Oswald'; background-color: rgba(0,0,0,0.5); }
 
 /* Signature */
 #signature { margin-right: 20px; float: right !important; text-transform: uppercase !important; }
