--- a/wp-content/themes/bars2013/css/text.css
+++ b/wp-content/themes/bars2013/css/text.css
@@ -113,7 +113,7 @@
 #page-contact .contact-form-input-hint { font-size: 8pt; font-style: italic; }
 
 /* Genericon pseudo-elements */
-.posts .post .post-comment-count a:before  { content: '\f108'; margin-right: 5px; font-size: 16px; font-family: 'Genericons'; vertical-align: top; }
+.posts .post .post-comment-count a:before  { content: '\f108'; margin-right: 5px; font-size: 16px; font-family: 'Genericons'; vertical-align: bottom; }
 #page-single .post-header .post-category a:before { content: '\f301'; font-family: 'Genericons'; }
 #page-single .post-leave-us-a-comment a:before { content: '\f300'; font-family: 'Genericons'; padding-right: 5px; }
 #page-search .search-no-results:before  { content: '\f456'; font-size: 100px; font-family: 'Genericons'; }
