--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -129,7 +129,8 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 .posts .post .post-info-container .post-excerpt p { margin: 10px 0; }
 .posts .post .post-footer .scratch { margin-bottom: 5px; }
 .posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
-.posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
+.posts .post .post-footer .post-comment-count { height: 21px; padding: 0 4px; float: left; background: rgb(175,0,0); margin-right: 10px; border-radius: 3px; }
+.posts .post .post-footer .post-comment-count a { vertical-align: middle; }
 
 /* Pagination */
 .pagination { font-size: 10pt; font-family: Oswald; text-align: center; background: black; margin-bottom: 10px;  }
