--- a/wp-content/themes/bars2013/css/contact.css
+++ b/wp-content/themes/bars2013/css/contact.css
@@ -31,3 +31,4 @@
  
 #page-contact form input[type=text]:focus, textarea:focus { box-shadow: 0 0 10px red; padding: 3px 0px 3px 3px; margin: 5px 1px 3px 0px; border: 1px solid rgba(81, 203, 238, 1); }
 
+#page-contact form#contact-form #submit input { cursor: pointer; width: 100px; margin: 0 auto; background-color: rgb(175,0,0); border: none; color: white; font-family: Oswald; text-transform: uppercase; font-size: 15px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
