Added send email functionality. TODO: body html, form input sanitizing/validations

--- a/css/text.css
+++ b/css/text.css
@@ -11,6 +11,8 @@
 .warning.search-no-results:before  { content: '\f456'; font-size: 100px; font-family: 'Genericons'; }
 .warning.under-construction:before  { content: '\f414'; font-size: 100px; font-family: 'Genericons'; }
 .warning.error404:before  { content: '\f423'; font-size: 200px; font-family: 'Genericons'; line-height: 140px; vertical-align: middle; }
+.warning.email-success:before { content: '\f465'; font-size: 100px; font-family: 'Genericons'; }
+.warning.email-error:before { content: '\f424'; font-size: 100px; font-family: 'Genericons'; }
 
 /* Header */
 #header { font-family: 'Oswald'; color: white; }
