--- a/css/contact.css
+++ b/css/contact.css
@@ -6,14 +6,14 @@
 
 #contact-form #name input,
 #contact-form #email input,
-#contact-form #media input,
+#contact-form #url input,
 #contact-form #subject input { width: 350px; }
 
 #contact-form #message textarea { width: 350px; height: 150px; }
 #contact-form .contact-form-input-hint { text-align: right; }
 
 /* Input styling */
-#contact-form input, #contact-form textarea { font-family: 'Open Sans'; font-size: 10pt; margin: 0; padding: 7px; }
+#contact-form input, #contact-form textarea { border-radius: 4px; font-family: 'Open Sans'; font-size: 10pt; margin: 0 0 5px 0; padding: 8px; }
 #contact-form #submit input { padding: 10px; }
 
 /* Validation messages styling */
@@ -22,13 +22,13 @@
 #contact-form .contact-form-input label.error { float: left; vertical-align: top; padding: 5px 10px; color: red; }
 
 /* Shadow transition on focus*/
-#contact-form input[type=text], textarea { outline: none; padding: 3px 0px 3px 3px; margin: 5px 1px 3px 0px; border: 1px solid #DDDDDD;
+#contact-form input[type=text], textarea { outline: none; border: 1px solid #DDDDDD;
 	-webkit-transition: all 0.30s ease-in-out;
 	-moz-transition: all 0.30s ease-in-out;
 	-ms-transition: all 0.30s ease-in-out;
 	-o-transition: all 0.30s ease-in-out;
 }
  
-#contact-form input[type=text]:focus, textarea:focus { box-shadow: 0 0 10px red; padding: 3px 0px 3px 3px; margin: 5px 1px 3px 0px; border: 1px solid rgba(81, 203, 238, 1); }
+#contact-form input[type=text]:focus, textarea:focus { box-shadow: 0 0 10px red; border: 1px solid rgba(81, 203, 238, 1); }
 
 #contact-form #submit input { cursor: pointer; width: 100px; margin: 0 auto; background-color: rgb(175,0,0); border: none; color: white; font-family: Oswald; text-transform: uppercase; font-size: 15px; -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px; }
