--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 .clear { clear: both; }
 .relative { position: relative; }
 .overflow-hidden { overflow: hidden; }
-.hidden-movie-container { display: none; }
 
 ul.checkmark { list-style: none; list-style-position: outside;  }
 ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6em; }
@@ -208,9 +207,9 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 .movie .info-container .image,
 .movieblock .info-container .image { float: left; padding: 0 10px 0 0; }
 .movie .info-container .info .directors { margin-top: 10px; }
-.movie .movie-synopsis { overflow: hidden; }
+.movie .movie-synopsis { overflow: hidden; margin-bottom: 20px;}
 .movie .movie-synopsis p { margin: 0; }
-.movie .trailer-container { width: 300px; float: right; margin: 0 0 5px 10px; }
+.movie .trailer-container { float: right; margin: 0 0 5px 10px; }
 
 /* Movie block info (single-movieblock.php) */
 .movieblock .movie-selectors { float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
