--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,13 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 #header-menu .nav-menu ul { position: relative; left: 50%; margin: 0; padding: 0; }
 #header-menu .nav-menu ul li { display: table-cell !important; position: relative; right: 50%; vertical-align: middle; padding: 8px; }
 
+/* Call is open! 2014 */
+#header-menu .nav-menu li:nth-child(4) { position: relative; width: 140px; }
+#header-menu .nav-menu li:nth-child(4):hover { background: none; }
+#header-menu .nav-menu li:nth-child(4).current_page_item:hover { background: #ad0000; }
+#header-menu .nav-menu li:nth-child(4) a.call-is-open { padding: 0; display: block; position: absolute; left: 50%; margin-left: -70px; top: 50%; margin-top: -32px; z-index: 1; width: 140px; height: 68px; background-image: url('images/convocatoria2014.png'); } /* image: 140x68 */
+#header-menu .nav-menu li:nth-child(4) a.call-is-open:hover { background-image: url('images/convocatoria2014_hover.png'); }
+
 /* Sticky menu fix */
 #header-menu { z-index: 99; width: 100%; }
 
@@ -159,6 +166,9 @@ body { margin: 0; background: url("images/bgpattern2.png"); overflow-x: hidden; 
 
 /* Convocatoria (call.php -> tmpl_call) */
 #page-call .basis { padding: 10px 20px 20px 10px; }
+#page-call .banners { margin: 0 auto 20px auto; text-align: center; }
+#page-call .banners tr td { vertical-align: middle; }
+#page-call .banners tr td a { padding: 5px; }
 #page-call .basis-footer { padding: 20px 40px 40px 40px; background: #110000;  }
 #page-call .basis > ul { list-style-type: lower-alpha; }
 #page-call .basis > ul > li { margin: 15px 0; word-wrap: break-word; }
