--- a/css/sponsors.css
+++ b/css/sponsors.css
@@ -1,36 +1,68 @@
 .sponsors { text-align: center; overflow: hidden; width: 100%; margin: 0 auto; }
-.auspiciante { margin: 20px 35px 0 35px; width:140px; height:80px; display:inline-block; overflow:hidden; background-repeat: no-repeat; background:url("images/auspiciantes_gray.png");}
+.auspiciante { margin: 20px 35px 0 35px; width:140px; height:80px; display:inline-block; overflow:hidden; background-repeat: no-repeat; background:url("images/auspiciantes.png");}
 .auspiciante a { display: block; height: 100%; width: 100%; }
-.auspiciante:hover { background-image: url("images/auspiciantes.png"); }
 
-.auspiciante_ab {background-position: -854px -166px}
-.auspiciante_bsasciudad {background-position: -712px -166px}
-.auspiciante_campari {background-position: -570px -330px}
-.auspiciante_cinefania {background-position: -570px -248px}
-.auspiciante_cinesargentinos {background-position: -570px -166px}
-.auspiciante_cunnington {background-position: -854px -84px}
-.auspiciante_eda {background-position: -712px -84px}
-.auspiciante_fantafestivales {background-position: -570px -84px}
-.auspiciante_festeringslime {background-position: -854px -2px}
-.auspiciante_filmoteca {background-position: -712px -2px}
-.auspiciante_findlingfilms {background-position: -570px -2px}
-.auspiciante_incaa {background-position: -428px -330px}
-.auspiciante_lacripta {background-position: -428px -248px}
-.auspiciante_leotripi {background-position: -428px -166px}
-.auspiciante_metamorfosisfx {background-position: -428px -84px}
-.auspiciante_monumental {background-position: -428px -2px}
-.auspiciante_mostaza {background-position: -286px -330px}
-.auspiciante_nacionalrock {background-position: -286px -248px}
-.auspiciante_piromaniafx {background-position: -286px -166px}
-.auspiciante_planetarycomics {background-position: -286px -84px}
-.auspiciante_quintadimension {background-position: -286px -2px}
-.auspiciante_rafma {background-position: -144px -330px}
-.auspiciante_rarovhs {background-position: -144px -248px}
-.auspiciante_rentalbsas {background-position: -144px -166px}
-.auspiciante_requiem {background-position: -144px -84px}
-.auspiciante_sony {background-position: -144px -2px}
-.auspiciante_syfy {background-position: -2px -330px}
-.auspiciante_ticoral {background-position: -2px -248px}
-.auspiciante_toronja {background-position: -2px -166px}
-.auspiciante_vacomoloco {background-position: -2px -84px}
-.auspiciante_videoflims {background-position: -2px -2px}
+.auspiciante_ab									{ background-position: -852px -164px }
+.auspiciante_bsasciudad					{ background-position: -710px -164px }
+.auspiciante_campari						{ background-position: -568px -328px }
+.auspiciante_cinefania					{ background-position: -568px -246px }
+.auspiciante_cinesargentinos		{ background-position: -568px -164px }
+.auspiciante_cunnington					{ background-position: -852px -82px }
+.auspiciante_eda								{ background-position: -710px -82px }
+.auspiciante_fantafestivales		{ background-position: -568px -82px }
+.auspiciante_festeringslime			{ background-position: -852px 0px }
+.auspiciante_filmoteca					{ background-position: -710px 0px }
+.auspiciante_findlingfilms			{ background-position: -568px 0px }
+.auspiciante_incaa							{ background-position: -426px -328px }
+.auspiciante_lacripta						{ background-position: -426px -246px }
+.auspiciante_leotripi						{ background-position: -426px -164px }
+.auspiciante_metamorfosisfx			{ background-position: -426px -82px }
+.auspiciante_monumental					{ background-position: -426px 0px }
+.auspiciante_mostaza						{ background-position: -284px -328px }
+.auspiciante_nacionalrock				{ background-position: -284px -246px }
+.auspiciante_piromaniafx				{ background-position: -284px -164px }
+.auspiciante_planetarycomics		{ background-position: -284px -82px }
+.auspiciante_quintadimension		{ background-position: -284px 0px }
+.auspiciante_rafma							{ background-position: -142px -328px }
+.auspiciante_rarovhs						{ background-position: -142px -246px }
+.auspiciante_rentalbsas					{ background-position: -142px -164px }
+.auspiciante_requiem						{ background-position: -142px -82px }
+.auspiciante_sony								{ background-position: -142px 0px }
+.auspiciante_syfy								{ background-position: 0px -328px }
+.auspiciante_ticoral						{ background-position: 0px -246px }
+.auspiciante_toronja						{ background-position: 0px -164px }
+.auspiciante_vacomoloco					{ background-position: 0px -82px }
+.auspiciante_videoflims					{ background-position: 0px 0px }
+
+/* Hover - Difference is 408 in height. */
+.auspiciante_ab:hover									{ background-position: -852px 244px }
+.auspiciante_bsasciudad:hover					{ background-position: -710px 244px }
+.auspiciante_campari:hover						{ background-position: -568px 80px }
+.auspiciante_cinefania:hover					{ background-position: -568px 162px }
+.auspiciante_cinesargentinos:hover		{ background-position: -568px 244px }
+.auspiciante_cunnington:hover					{ background-position: -852px 326px }
+.auspiciante_eda:hover								{ background-position: -710px 326px }
+.auspiciante_fantafestivales:hover		{ background-position: -568px 326px }
+.auspiciante_festeringslime:hover			{ background-position: -852px 408px }
+.auspiciante_filmoteca:hover					{ background-position: -710px 408px }
+.auspiciante_findlingfilms:hover			{ background-position: -568px 408px }
+.auspiciante_incaa:hover							{ background-position: -426px 80px }
+.auspiciante_lacripta:hover						{ background-position: -426px 162px }
+.auspiciante_leotripi:hover						{ background-position: -426px 244px }
+.auspiciante_metamorfosisfx:hover			{ background-position: -426px 326px }
+.auspiciante_monumental:hover					{ background-position: -426px 408px }
+.auspiciante_mostaza:hover						{ background-position: -284px 80px }
+.auspiciante_nacionalrock:hover				{ background-position: -284px 162px }
+.auspiciante_piromaniafx:hover				{ background-position: -284px 244px }
+.auspiciante_planetarycomics:hover		{ background-position: -284px 326px }
+.auspiciante_quintadimension:hover		{ background-position: -284px 408px }
+.auspiciante_rafma:hover							{ background-position: -142px 80px }
+.auspiciante_rarovhs:hover						{ background-position: -142px 162px }
+.auspiciante_rentalbsas:hover					{ background-position: -142px 244px }
+.auspiciante_requiem:hover						{ background-position: -142px 326px }
+.auspiciante_sony:hover								{ background-position: -142px 408px }
+.auspiciante_syfy:hover								{ background-position: 0px 80px }
+.auspiciante_ticoral:hover						{ background-position: 0px 162px }
+.auspiciante_toronja:hover						{ background-position: 0px 244px }
+.auspiciante_vacomoloco:hover					{ background-position: 0px 326px }
+.auspiciante_videoflims:hover					{ background-position: 0px 408px }
